--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 	
 	
 	<div id="wrap">
-		<h1>Twelección</h1>
+		<h1><a href="/">twelección</a></h1>
 		<div id="content">
 			{% block content %}{% endblock %}
 		</div>
