--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -6,6 +6,13 @@ version: 2.6.0
 */
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}del,ins{text-decoration:none;}
 
+/*
+Amarillo: #ffce00
+Azul:0035ad
+Rojo:d21034
+
+*/
+
 b {
 	font-weight:normal;
 }
@@ -13,13 +20,23 @@ b {
 html {
 	font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Calibri, Verdana, sans-serif;
 	font-weight:300;
-	background:#eee;
+	background:#111 url('/static/images/background.png');
 }
 
 h1 {
 	font-size:24px;
 	line-height:1;
-	margin:1em 0;
+	width:481px;
+	height:48px;
+	margin-top:1em;
+}
+
+h1 a{
+	display:block;
+	width:481px;
+	height:48px;
+	text-indent:-10000px;
+	background:url('/static/images/logo.png') top left no-repeat;
 }
 
 #wrap {
@@ -34,23 +51,26 @@ h1 {
 	-webkit-border-radius:10px;
 	-moz-border-radius:10px;
 	margin-bottom:100px;
-	border:1px solid #ddd;
+	border:1px solid #ccc;
 	padding-bottom:24px;
 	margin-bottom:24px;
+	-webkit-box-shadow:0 2px 10px #000;
+	-moz-box-shadow:0 2px 10px #000;
 }
 
 #about {
 	width:270px;
-	margin-left:30px;
+	margin-right:30px;
 	float:left;
 }
 
 
 
 #tweets {
-	width:600px;
+	width:599px;
 	float:left;
 	margin: 0 30px;
+	border-right:1px solid #ccc;
 }
 
 div.single {
@@ -70,7 +90,8 @@ ul li {
 	margin:1.5em 0 0 0;
 	padding-bottom:1.5em;
 	float:left;
-	width:600px;
+	width:570px;
+	padding-right:30px;
 	border-bottom:1px dotted #ccc;
 }
 
@@ -99,7 +120,7 @@ h2 {
 	margin-top:1.2em;
 }
 
-p, #about h2 {
+p, h3 {
 	font-size:12px;
 	line-height:2;
 	margin:2em 0;
@@ -119,7 +140,7 @@ a:hover, a:active {
 		font-weight:normal;
 }
 
-h2 {
+h2, h3 {
 	font-weight:bold;
 }
 
@@ -137,7 +158,7 @@ p.gae {
 	height:30px;
 	display:block;
 	margin:0 auto;
-	text-indent:-1000px;
+	text-indent:-10000px;
 	background:url('/static/images/appengine-noborder-120x30.gif') top left no-repeat;
 }
 
