--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -18,9 +18,9 @@ b {
 }
 
 html {
-	font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Calibri, Verdana, sans-serif;
+	font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Calibri, Arial, sans-serif;
 	font-weight:300;
-	background:#111 url('/static/images/background.png');
+	background:#000;
 }
 
 h1 {
@@ -48,8 +48,8 @@ h1 a{
 	width:960px;
 	float:left;
 	background:#fff;
-	-webkit-border-radius:10px;
-	-moz-border-radius:10px;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
 	margin-bottom:100px;
 	border:1px solid #ccc;
 	padding-bottom:24px;
