--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,9 @@
 <title>{% block title %}{% endblock %}</title>
 <meta name="verify-v1" content="eBzrePQaUvV4I6H782nnKWpt4sszB1yh66MuO30Rpm8=" />
 <link rel="stylesheet" media="all" type="text/css" href="/static/stylesheets/styles.css" />
+<!--[if lte IE 6]>
+<link href="/static/stylesheets/ie6.css" media="screen" rel="stylesheet" type="text/css" />
+<![endif]-->
 </head>
 <body>
 	
