--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,16 @@
 	<h2>Últimos mensajes acerca del #15F <span class="loading" style="display:none;">Esperando por más tweets&hellip;</span></h2>
 <ul>
 	{% for t in tweets %}
-	<li id="t_{{t.tweet_id}}"><a href="{{t.author_uri}}" class="author">{{ t.author }}</a> {{ t.content|safe }} <span class="meta"><a href="{{t.uri}}">A las {{ t.published_ve|date:"g:i a" }}</a></span></li>
+	<li id="t_{{t.tweet_id}}"><a href="{{t.author_uri}}" class="author">{{ t.author }}</a> {{ t.content|safe }}<br/><span class="meta"><a href="{{t.uri}}">A las {{ t.published_ve|date:"g:i a" }}</a></span></li>
 	{% endfor %}
 </ul>
 </div>
 
 <div id="about">
+	<h3>¿Qué es esto?</h3>
+	<p>twelección recoje todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de <a href="http://twitter.com">Twitter</a> acerca las elecciones en Venezuela, este Domingo 15 de febrero.</p>
 	<h3>¿Quieres participar?</h3>
-	<p><a href="https://twitter.com/signup">Crea tu cuenta</a> en <a href="http://twitter.com">Twitter</a> y envía lo que desees. Sólo debes asegurarte de incluir <strong>#15f</strong> o <strong>#15F</strong> en tu mensaje para que aparezca aquí. Los mensajes pueden tardar un par de minutos en aparecer.</p>
+	<p><a href="https://twitter.com/signup">Crea tu cuenta</a> en <a href="http://twitter.com">Twitter</a> y envía lo que desees. Sólo debes asegurarte de incluir <strong>#15f</strong> o <strong>#15F</strong> en el texto de tu mensaje para que aparezca aquí. Los mensajes pueden tardar un par de minutos en aparecer.</p>
 	
 	<p>Desarrollado por <a href="http://www.gesteves.com">Guillermo Esteves</a>.</p>
 				
