--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -123,7 +123,7 @@ h2 {
 p, h3 {
 	font-size:12px;
 	line-height:2;
-	margin:2em 0;
+	margin-bottom:2em;
 }
 
 a {
@@ -142,6 +142,11 @@ a:hover, a:active {
 
 h2, h3 {
 	font-weight:bold;
+}
+
+h3 {
+	margin-top:2em;
+	margin-bottom:0;
 }
 
 strong {
