Added google webmaster tools, yahoo site explorer and live webmaster center verification tags

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,9 @@
 <!--[if lte IE 6]>
 <link href="/static/stylesheets/ie6.css" media="screen" rel="stylesheet" type="text/css" />
 <![endif]-->
+<meta name="verify-v1" content="eBzrePQaUvV4I6H782nnKWpt4sszB1yh66MuO30Rpm8=" />
+<meta name="y_key" content="c71a7845d484e87e" />
+<meta name="msvalidate.01" content="5998EA52F4BC112E1D02B83C16926EE6" />
 </head>
 <body>
 	
