--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -7,7 +7,7 @@ version: 2.6.0
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}del,ins{text-decoration:none;}
 
 /*
-Amarillo: #ffce00
+Amarillo: #ffff00
 Azul:0035ad
 Rojo:d21034
 
@@ -20,7 +20,7 @@ b {
 html {
 	font-family:"HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Calibri, Arial, sans-serif;
 	font-weight:300;
-	background:#000;
+	background:#edf1f9;
 }
 
 h1 {
@@ -51,11 +51,8 @@ h1 a{
 	-webkit-border-radius:5px;
 	-moz-border-radius:5px;
 	margin-bottom:100px;
-	border:1px solid #ccc;
 	padding-bottom:24px;
 	margin-bottom:24px;
-	-webkit-box-shadow:0 2px 10px #000;
-	-moz-box-shadow:0 2px 10px #000;
 }
 
 #about {
@@ -67,10 +64,9 @@ h1 a{
 
 
 #tweets {
-	width:599px;
+	width:600px;
 	float:left;
 	margin: 0 30px;
-	border-right:1px solid #ccc;
 }
 
 div.single {
@@ -82,17 +78,23 @@ div.single {
 ul {
 	font-size:16px;
 	line-height:1.5;
-	width:600px;
+	width:540px;
 	float:left;
+	background:#edf1f9;
+	padding:1.5em 30px 1.5em 30px;
+	margin:1.5em 0;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
 }
 
 ul li {
-	margin:1.5em 0 0 0;
-	padding-bottom:1.5em;
+	margin:0 0 1px 0;
 	float:left;
-	width:570px;
-	padding-right:30px;
-	border-bottom:1px dotted #ccc;
+	width:480px;
+	background:#fff;
+	padding:1.5em 30px 1.5em 30px;
+	-webkit-border-radius:5px;
+	-moz-border-radius:5px;
 }
 
 
@@ -123,6 +125,26 @@ p, h3 {
 	font-size:12px;
 	line-height:2;
 	margin-bottom:2em;
+}
+
+h3.side1, h3.side2, h3.side3 {
+	-webkit-border-top-left-radius:5px;
+	-webkit-border-top-right-radius:5px;
+	-moz-border-radius-topleft:5px;
+	-moz-border-radius-topright:5px;
+	padding:0 10px;
+}
+h3.side1 {
+	background:#ff0;
+}
+
+h3.side2 {
+	background:#0035ad;
+	color:#fff;
+}
+h3.side3 {
+	background:#d21034;
+	color:#fff;
 }
 
 a {
@@ -158,13 +180,13 @@ p.notes {
 }
 
 p.gae {
-	width:120px;
-	height:30px;
-	display:block;
-	margin:0 auto;
+	padding-top:30px;
+	border-top:1px dotted #ccc;
 	text-indent:-10000px;
-	background:url('/static/images/appengine-noborder-120x30.gif') top left no-repeat;
+	background:url('/static/images/appengine-noborder-120x30.gif') center 24px no-repeat;
 }
+
+
 
 span.loading {
 	padding-left:18px;
