--- a/templates/index.html
+++ b/templates/index.html
@@ -14,16 +14,20 @@
 </div>
 
 <div id="about">
-	<h3>¿Qué es esto?</h3>
+	<div>
+	<h3 class="side1">¿Qué es esto?</h3>
 	<p>twelección recoje todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de <a href="http://twitter.com">Twitter</a> acerca las elecciones en Venezuela, este Domingo 15 de febrero.</p>
-	<h3>¿Quieres participar?</h3>
+	</div>
+	<div>
+	<h3 class="side2">¿Quieres participar?</h3>
 	<p><a href="https://twitter.com/signup">Crea tu cuenta</a> en <a href="http://twitter.com">Twitter</a> y envía lo que desees. Sólo debes asegurarte de incluir <strong>#15f</strong> o <strong>#15F</strong> en el texto de tu mensaje para que aparezca aquí. Los mensajes pueden tardar un par de minutos en aparecer.</p>
 				
 	<p>¿Dudas, comentarios o sugerencias? <a href="http://twitter.com/home?status=@gesteves%20">Contáctame</a>.</p>
 	
+	<div>
+	<h3 class="side3">Créditos</h3>
 	<p>Desarrollado por <a href="http://www.gesteves.com">Guillermo Esteves</a>.</p>
-
-				
+	</div>
 	<p class="gae">Powered by Google App Engine.</p>
 				
 				
