--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -156,9 +156,9 @@ a:hover, a:active {
 	color:#d21034;
 }
 
-#content div {
-		font-family:"Helvetica Neue", Calibri, Verdana, sans-serif;
-		font-weight:normal;
+#about {
+	font-family:"Helvetica Neue", Calibri, Verdana, sans-serif;
+	font-weight:normal;
 }
 
 h2, h3 {
