Created mobile version

--- a/templates/mobile-index.html
+++ b/templates/mobile-index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "mobile-base.html" %}
 {% block title %}twelección &ndash; tú decides. tú comentas.{% endblock %}
 
 
