--- a/static/stylesheets/iphone.css
+++ b/static/stylesheets/iphone.css
@@ -17,12 +17,13 @@ html {
 }
 
 h1, h1 a {
-	width:320px;
-	height:72px;
+	width:170px;
+	height:48px;
+	margin: 10px;
 }
 
 h1 a{
-	background:url('/static/images/logo-iphone.png') top center no-repeat;
+	background:url('/static/images/logo-mobile.png') top center no-repeat;
 }
 
 #tweets {
