--- a/templates/mobile-base.html
+++ b/templates/mobile-base.html
@@ -20,6 +20,7 @@ li {border-bottom:1px solid #e0e6f5;padding:10px 0;}
 p {margin-bottom:1.5em;font-size:10px;}
 h2, h3 {font-weight:bold;margin-top:1.5em;}
 span.meta, span.meta a {font-size:10px;color:#666;}
+span.loading{display:none;}
 </style>
 </head>
 <body>
@@ -27,16 +28,5 @@ span.meta, span.meta a {font-size:10px;color:#666;}
 		<h1><a href="/">twelección</a></h1>
 		{% block content %}{% endblock %}
 	
-	<script type="text/javascript">
-	var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-	document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-	</script>
-	<script type="text/javascript">
-	try {
-	var pageTracker = _gat._getTracker("UA-250261-22");
-	pageTracker._trackPageview();
-	} catch(err) {}</script>
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.1/jquery.min.js" type="text/javascript"></script>
-	<script src="/static/javascripts/application.js" type="text/javascript"></script>
 </body>
 </html>
