Put the right link to the mobile version

--- a/templates/content.html
+++ b/templates/content.html
@@ -11,7 +11,7 @@
 	<h3 class="side1">¿Qué es esto?</h3>
 	<p>twelección recoje todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de <a href="http://twitter.com">Twitter</a> acerca las elecciones en Venezuela, este Domingo 15 de febrero.</p>
 	
-	<p>También puedes verlos desde tu celular entrando en <a href="http://m.twitter.com">m.twitter.com</a>
+	<p>También puedes verlos desde tu celular entrando en <a href="http://m.tweleccion.com">m.tweleccion.com</a>
 	
 	<h3 class="side2">¿Quieres participar?</h3>
 	<p><a href="https://twitter.com/signup">Crea tu cuenta</a> en <a href="http://twitter.com">Twitter</a> y envía lo que desees. Sólo debes asegurarte de incluir <strong>#15f</strong> o <strong>#15F</strong> en el texto de tu mensaje para que aparezca aquí. Los mensajes pueden tardar un par de minutos en aparecer.</p>
