--- a/templates/mobile-base.html
+++ b/templates/mobile-base.html
@@ -21,6 +21,7 @@ p {margin-bottom:1.5em;font-size:10px;}
 h2, h3 {font-weight:bold;margin-top:1.5em;}
 span.meta, span.meta a {font-size:10px;color:#666;}
 span.loading{display:none;color:#fff;}
+b {font-weight:normal;}
 </style>
 </head>
 <body>
