--- a/static/stylesheets/iphone.css
+++ b/static/stylesheets/iphone.css
@@ -50,7 +50,13 @@ ul li {
 }
 
 h2 {
-	display:none;
+	margin-left:10px;
+	margin-right:10px;
+	font-weight:bold;
+}
+
+h2 span.loading {
+	color:#fff;
 }
 
 h3 {
