--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -118,7 +118,7 @@ span.meta a:hover, span.meta a:active {
 h2 {
 	font-size:20px;
 	line-height:1.2;
-	margin-top:1.2em;
+	margin:1.2em 30px 0 30px;
 }
 
 p, h3 {
