--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,15 @@
 
 
 {% block content %}
+<h2>Últimos mensajes acerca del #15F <span class="loading" style="display:none;">Esperando por más tweets&hellip;</span></h2>
+<div id="tweets">
+	{% include 'tweets.html' %}
+	<p id="more"><a href="#">Ver tweets anteriores</a></p>
+</div>
 
-{% include 'content.html' %}
+
+<div id="about">
+	{% include 'about.html' %}
+</div>
 
 {% endblock %}
