--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -97,6 +97,13 @@ ul li {
 	-moz-border-radius:5px;
 }
 
+p#more {
+	font-size:16px;
+	line-height:1.5;
+	margin:1.5em 0;
+	text-align:center;
+}
+
 
 span.author {
 	font-weight:bold;
