--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
 <h3 class="side1">¿Qué es esto?</h3>
-<p>twelección recoje todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de <a href="http://twitter.com">Twitter</a> acerca las elecciones en Venezuela, este Domingo 15 de febrero.</p>
+<p>twelección recoge todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de <a href="http://twitter.com">Twitter</a> acerca las elecciones en Venezuela, este Domingo 15 de febrero.</p>
 
 <p>También puedes verlos desde tu celular entrando en <a href="http://m.tweleccion.com">m.tweleccion.com</a></p>
 
