Fixed another two typos

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 <meta http-equiv="content-type" content="text/html;charset=UTF-8" />
 <meta name="author" content="Guillermo Esteves" />
 <title>{% block title %}{% endblock %}</title>
-<meta name="description" content="twelección recoje todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de Twitter acerca las elecciones en Venezuela, este Domingo 15 de febrero." />
+<meta name="description" content="twelección recoge todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de Twitter acerca las elecciones en Venezuela, este Domingo 15 de febrero." />
 <meta name="verify-v1" content="eBzrePQaUvV4I6H782nnKWpt4sszB1yh66MuO30Rpm8=" />
 <link rel="stylesheet" media="all" type="text/css" href="/static/stylesheets/styles.css" />
 <!--[if lte IE 6]>
