Changed all references to tweleccion

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,15 +1,29 @@
 <h3 class="side1">¿Qué es esto?</h3>
-<p>twelección recoge todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de <a href="http://twitter.com">Twitter</a> acerca las elecciones en Venezuela, este Domingo 15 de febrero.</p>
+<p>venetuits recoge todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de <a href="http://twitter.com">Twitter</a> desde o acerca de Venezuela.</p>
 
-<p>También puedes verlos desde tu celular entrando en <a href="http://m.tweleccion.com">m.tweleccion.com</a></p>
+<p>También puedes verlos desde tu celular entrando en <a href="http://m.venetuits.com">m.venetuits.com</a></p>
+
+<div class="banner">
+	<script type="text/javascript"><!--
+	google_ad_client = "pub-6143920620004344";
+	/* 250x250, created 2/11/09 */
+	google_ad_slot = "2521807187";
+	google_ad_width = 250;
+	google_ad_height = 250;
+	//-->
+	</script>
+	<script type="text/javascript"
+	src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+	</script>
+</div>
 
 <h3 class="side2">¿Quieres participar?</h3>
-<p><a href="https://twitter.com/signup">Crea tu cuenta</a> en <a href="http://twitter.com">Twitter</a> y envía lo que desees. Sólo debes asegurarte de incluir <strong>#15f</strong> o <strong>#15F</strong> en el texto de tu mensaje para que aparezca aquí. Los mensajes pueden tardar un par de minutos en aparecer.</p>
+<p><a href="https://twitter.com/signup">Crea tu cuenta</a> en <a href="http://twitter.com">Twitter</a> y envía lo que desees. Sólo debes asegurarte de que al <a href="http://twitter.com/account/settings">editar tu perfil</a> el campo <q>Location</q> indique algún sitio de Venezuela. Los mensajes pueden tardar un par de minutos en aparecer.</p>
 			
 <p>¿Dudas, comentarios o sugerencias? <a href="http://twitter.com/home?status=@gesteves%20">Contáctame</a>.</p>
 
 <h3 class="side3">Advertencia</h3>
-<p>Los mensajes que aparecen aquí son enviados por los usuarios de <a href="http://twitter.com">Twitter</a>. twelección no se hace responsable por el contenido de los mismos.</p>
+<p>Los mensajes que aparecen aquí son enviados por los usuarios de <a href="http://twitter.com">Twitter</a>, y son &copy; de su respectivo autor. venetuits no se hace responsable por el contenido de los mismos.</p>
 
 <p class="by">Desarrollado por <a href="http://www.gesteves.com">Guillermo Esteves</a>.</p>
 <p class="gae">Powered by Google App Engine.</p>
