--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
-{% block title %}twelección &ndash; tú decides. tú comentas.{% endblock %}
+{% block title %}venetuits{% endblock %}
 
 
 {% block content %}
-<h2>Últimos mensajes acerca del #15F <span class="loading" style="display:none;">Esperando por más tweets&hellip;</span></h2>
+<h2>Últimos mensajes desde Venezuela <span class="loading" style="display:none;">Esperando por más tweets&hellip;</span></h2>
 <div id="tweets">
 	{% include 'tweets.html' %}
 	<p id="more"><a href="#">Ver tweets anteriores</a></p>
