--- a/templates/mobile-index.html
+++ b/templates/mobile-index.html
@@ -1,9 +1,9 @@
 {% extends "mobile-base.html" %}
-{% block title %}twelección &ndash; tú decides. tú comentas.{% endblock %}
+{% block title %}venetuits{% endblock %}
 
 
 {% block content %}
-<h2>Últimos mensajes acerca del #15F</h2>
+<h2>Últimos mensajes desde Venezuela</h2>
 <div id="tweets">
 	{% include 'tweets.html' %}
 </div>
