--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}página no encontrada &ndash; twelección{% endblock %}
+{% block title %}página no encontrada &ndash; venetuits{% endblock %}
 
 
 
