--- a/templates/mobile-base.html
+++ b/templates/mobile-base.html
@@ -5,7 +5,7 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="author" content="Guillermo Esteves" />
 <title>{% block title %}{% endblock %}</title>
-<meta name="description" content="twelección recoge todos los mensajes (o &ldquo;tweets&rdquo;) enviados por los usuarios de Twitter acerca las elecciones en Venezuela, este Domingo 15 de febrero." />
+<meta name="description" content="venetuits recoge todos los mensajes (o &ldquo;tuits&rdquo;) enviados por los usuarios de Twitter desde o acerca de Venezuela." />
 <style type="text/css" media="all">
 
 html{color:#000;background:#FFF;}body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,th,td{margin:0;padding:0;}table{border-collapse:collapse;border-spacing:0;}fieldset,img{border:0;}address,caption,cite,code,dfn,em,strong,th,var{font-style:normal;font-weight:normal;}li{list-style:none;}caption,th{text-align:left;}h1,h2,h3,h4,h5,h6{font-size:100%;font-weight:normal;}q:before,q:after{content:'';}abbr,acronym{border:0;font-variant:normal;}sup{vertical-align:text-top;}sub{vertical-align:text-bottom;}input,textarea,select{font-family:inherit;font-size:inherit;font-weight:inherit;}input,textarea,select{*font-size:100%;}legend{color:#000;}del,ins{text-decoration:none;}
@@ -26,7 +26,7 @@ b {font-weight:normal;}
 </head>
 <body>
 	
-		<h1><a href="/">twelección</a></h1>
+		<h1><a href="/">venetuits</a></h1>
 		{% block content %}{% endblock %}
 	
 </body>
