Changed the images

--- a/templates/about.html
+++ b/templates/about.html
@@ -18,7 +18,7 @@
 </div>
 
 <h3 class="side2">¿Quieres participar?</h3>
-<p><a href="https://twitter.com/signup">Crea tu cuenta</a> en <a href="http://twitter.com">Twitter</a> y envía lo que desees. Sólo debes asegurarte de que al <a href="http://twitter.com/account/settings">editar tu perfil</a> el campo <q>Location</q> indique algún sitio de Venezuela. Los mensajes pueden tardar un par de minutos en aparecer.</p>
+<p><a href="https://twitter.com/signup">Crea tu cuenta</a> en <a href="http://twitter.com">Twitter</a> y envía lo que desees. Sólo debes asegurarte de que al <a href="http://twitter.com/account/settings">editar tu perfil</a> el campo &#8220;Location&#8221; indique algún sitio de Venezuela. Los mensajes pueden tardar un par de minutos en aparecer.</p>
 			
 <p>¿Dudas, comentarios o sugerencias? <a href="http://twitter.com/home?status=@gesteves%20">Contáctame</a>.</p>
 
